# blitzml

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_blitzml_tabular_Classification.py  test_blitzml_tabular_Regression.py  test_blitzml_tabular_TimeSeries.py  test_blitzml_unsupervised_Clustering.py
auxiliary/banknote/: train.csv
auxiliary/datasets/Alcohol_Sales/: test.csv  train.csv
auxiliary/datasets/EnergyIndex/: test.csv  train.csv
auxiliary/datasets/HospitalityEmployees/: test.csv  train.csv
auxiliary/datasets/banknote/: ground_truth.csv  test.csv
auxiliary/datasets/customer personality/: train.csv
auxiliary/datasets/dry bean/: train.csv
auxiliary/datasets/house prices/: pred_df.csv
auxiliary/datasets/liqure quality/: test.csv  train.csv
auxiliary/datasets/meat consumption/: test.csv  train.csv
auxiliary/datasets/store sales/: test.csv  train.csv
auxiliary/output/: RF.pkl  submission.csv
auxiliary/scripts/: dummy.py
blitzml/: csv.py  tabular.py
blitzml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
blitzml/tabular/: __init__.py  _classification.py  _regression.py  _supervised.py  _timeseries.py  supervised.py
blitzml/unsupervised/: __init__.py  _clustering.py
