[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitzml"
version = "0.5.0"
description = "A low-code library for machine learning pipelines"
readme = "README.md"
authors = [{ name = "AI Team", email = "CV.Team.CSE.2023@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ml", "machine learning", "classification"]
dependencies = [
         'joblib>=1.2.0',
        'numpy>=1.23.4',
        'pandas>=1.5.1',
        'scikit-learn>=1.1.3'
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/AhmedMohamed25/blitzml"

